--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,7 @@ body {
     background-image: url(../img/kitty.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     height: 100vh;
 }
 
