--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,36 @@ h1{
     padding-top: 5%;
 }
 
+#btn {
+    background-color: #ff96ca;
+    color: #000;
+    border: 1px solid #000;
+    border-radius: 4px;
+    cursor: pointer;
+    display: inline-flex;
+    flex-shrink: 0;
+    font-size: 16px;
+    font-weight: bold;
+    gap: 8px;
+    justify-content: center;
+    line-height: 1.5;
+    overflow: hidden;
+    padding: 10px 16px;
+    text-decoration: none;
+    text-overflow: ellipsis;
+    transition: all 0.14s ease-out;
+    white-space: nowrap;
+}
+
+#btn:hover {
+    box-shadow: 4px 4px 0 #000;
+    transform: translate(-4px, -4px);
+}
+
+#btn:focus-visible {
+    outline-offset: 1px;
+}
+
 /* Styles de navigation */
 nav {
     display: flex;
